changes to gary theme plus admin menu etc

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -125,6 +125,7 @@
  font-weight: bold;
  text-decoration: none;
  font-size: 12px;
+ letter-spacing: -1px;
  color: #0fbbb5;
  padding-right: 10px;
  background: url(images/arrow-aqua.png) 100% 5px no-repeat transparent;
