--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -112,7 +112,7 @@ p.copy a.footer-login:hover {
   }
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
-  color: #cc0000 !important;
+  color: #228822 !important;
   }
 
 
@@ -167,6 +167,7 @@ ol {
 
 #content .node .terms ul, #content .node ul.links {
   padding-left: 0;
+  margin-top:0;
   }
 
 .terms ul li, .terms ul li a {
@@ -221,13 +222,13 @@ ul.links li a, ul.links li a:visited {
   font-style: normal;
   padding: 1px 0 1px 3px;
   font-size: 12px;
-  color: #005C9C;
+  color: #228822;
   background: transparent;
   }
 
 ul.links li a:hover {
   text-decoration: underline;
-  color: #005C9C;
+  color: #228822;
   }
 
 .views-admin-links ul.links li a {
@@ -492,6 +493,7 @@ body.header-left-right #header-right {
 .node {
   padding-bottom: 1.5em;
   margin-bottom: 1.5em;
+  clear:both;
   }
 
 .node-type-link {
@@ -523,10 +525,12 @@ ul.admin li {
   }
 
 ul.admin li a, ul.admin li a:visited {
-  text-decoration: underline;
   padding: 2px !important;
   }
 
+ul.admin li a:hover {
+  text-decoration: underline;
+  }
 
 a.delete {
   background: url(images/delete.png) no-repeat;
@@ -562,7 +566,7 @@ a.delete {
 a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link, .addcategory a {
   font-style: normal !important;
   font-size: 12px !important;
-  background: url(images/plus.gif) no-repeat 0 50% transparent !important;
+  background: url(images/plus.png) no-repeat 0 50% transparent !important;
   padding: 0 0 0 13px !important;
   }
 
