--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -5,6 +5,9 @@
   background: url(images/research-block.png) no-repeat 0 0 #fff;
   clear:both;
   padding: 0;
+  z-index:1;
+  font-size: 14px;
+  line-height: normal;
   }
 
 #block-iqss_gking-areas_of_research h3,
@@ -20,8 +23,8 @@
 #block-iqss_gking-areas_of_research #methods h4 {
   position: relative;
   left: 145px;
-  top:-15px;
-  margin-bottom: 5px;
+  top:-10px;
+  margin-bottom: 0;
   background: url(images/connector.png) no-repeat 100% 50% transparent;
   padding-right: 136px;
   width: 62px;
@@ -51,7 +54,7 @@
   }
 
 #block-iqss_gking-areas_of_research #methods {
-  margin-top: -16px;
+  margin-top: -21px;
   }
 
 #block-iqss_gking-areas_of_research #applications {
@@ -63,7 +66,7 @@
   }
 
 #block-iqss_gking-areas_of_research #applications h4 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   }
 
 #block-iqss_gking-areas_of_research dd {
