--- a/sites/all/modules/openscholar_features/scholar_profiles/scholar-profiles.css
+++ b/sites/all/modules/openscholar_features/scholar_profiles/scholar-profiles.css
@@ -1,7 +1,15 @@
-.node-type-person .profile-img img {
-	float: left;
-	margin: 0 15px 10px 0;
-	padding: 3px;
-	background: #fff;
-	border: 1px solid #ddd;
+.node-type-person h2.title, .node-type-person h3, .node-type-person h4, .node-type-person p {
+  margin:0;
+  }
+
+.page-people #content-main .views-row {
+  margin-bottom: 0;
+  }
+
+.node-type-person .flL {
+  margin: .3em 1.5em 1.5em 0;
+  }
+
+.node-type-persons ul.inline li {
+  margin-right: .3em;
   }
