--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -77,7 +77,9 @@ h2.title, .block h3.title, #pub_type_tabs h3.title, .taxonomy-term-child h3 {
   }
 
 .taxonomy-term-child h3 {
-  color: #000;
+  color: #777;
+  font-size: 24px;
+  background: #fff;
   }
 
 #content .node h3.title {
@@ -616,8 +618,13 @@ body.header-right-main #header-wrapper {
 
 body.section-category .node-teaser {
   margin-left: 2em;
+  margin-bottom: 0;
   }
 
 body.section-category .taxonomy-term-description {
   margin-bottom: 2.5em;
+  }
+
+body.section-category div.terms {
+  display:none;
   }
