added bolder warning to upload buttons

--- a/sites/all/themes/openscholar/scholar_base/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/forms.css
@@ -141,3 +141,19 @@ fieldset,select {
 #vsite-support-contact-mail-owner .form-item label {
   display:inline;
   }
+
+
+/* UPLOADS */
+#edit-upload-wrapper {
+  line-height: 30px;
+  }
+
+#attach-wrapper .file a {
+  padding: 2px 6px;
+  background: #b5e675;
+  color: #000;
+  }
+
+#attach-wrapper .file a.remove {
+  background: #db7272;
+  }
