last minute stuff

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -229,7 +229,7 @@ a:hover {
 #navbar a:hover {
   color: #000;
   text-decoration:none;
-  background: #fa8b18;
+  background-color: #fa8b18;
   }
 
 #navbar ul li.last {
@@ -252,6 +252,11 @@ a:hover {
   height: 29px;
   }
 
+#block-scholar-1 h1 a:hover {
+  background-color: #000;
+  color: #fff;
+  }
+
 #navbar ul li a, #block-scholar-1 h1 a {
   display:block;
   }
@@ -259,7 +264,7 @@ a:hover {
 #navbar ul li a {
   padding-left: 12px;
   padding-right: 12px;
-  background:#db7002;
+  background-color:#db7002;
   }
 
 
@@ -269,7 +274,7 @@ a:hover {
 
 #navbar ul li a.active, #navbar ul li a.active:hover {
   color: #000;
-  background:#db7002;
+  background-color:#db7002;
   }
 
 #block-scholar-1 h2, #block-scholar-1 p {
