red on required

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -111,10 +111,13 @@ p.copy a.footer-login:hover {
   background: #fff !important;
   }
 
-.marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
+.marker, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
   color: #228822 !important;
   }
 
+.form-required {
+  color: #d70404 !important;
+  }
 
 p.copy #powered-link {
   float: right;
