gary site; scholar person

--- a/sites/all/modules/openscholar_features/scholar_profiles/scholar-profiles.css
+++ b/sites/all/modules/openscholar_features/scholar_profiles/scholar-profiles.css
@@ -10,6 +10,11 @@
   margin: .3em 1.5em 1.5em 0;
   }
 
-.node-type-persons ul.inline li {
+#content .node-type-person ul.inline {
+  padding: 0;
+  margin: 0;
+  }
+
+.node-type-person ul.inline li {
   margin-right: .3em;
   }
