--- a/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
@@ -50,6 +50,7 @@
   background: transparent;
   padding: 4px 9px !important;
   display:block;
+  font: normal 12px/normal arial, sans-serif;
   }
 
 .vsite-admin ul.links li .flag-wrapper a {
