--- a/sites/all/modules/openscholar_vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/openscholar_vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -60,6 +60,35 @@ li li li .term-head {
   padding-left: 2em;
   }
 
+
+.item-list .vsite-taxonomy-terms li ul ul ul .term-head,
+.block-vsite_taxonomy li ul ul ul .term-head {
+  padding-left: 3em;
+  }
+
+
+.item-list .vsite-taxonomy-terms li ul ul ul ul .term-head,
+.block-vsite_taxonomy li ul ul ul ul .term-head {
+  padding-left: 4em;
+  }
+
+
+.item-list .vsite-taxonomy-terms li ul ul ul ul ul .term-head,
+.block-vsite_taxonomy li ul ul ul ul ul .term-head {
+  padding-left: 5em;
+  }
+
+.item-list .vsite-taxonomy-terms li ul ul ul ul ul ul .term-head,
+.block-vsite_taxonomy li ul ul ul ul ul ul .term-head {
+  padding-left: 6em;
+  }
+
+.item-list .vsite-taxonomy-terms li ul ul ul ul ul ul ul .term-head,
+.block-vsite_taxonomy li ul ul ul ul ul ul ul .term-head {
+  padding-left: 7em;
+  }
+
+
 .vsite-taxonomy-terms li a {
   color: #000;
   }
