removed or customized submitted fields in templates

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -136,9 +136,15 @@ p.copy a.poweredby:hover {
   border: none !important;
   }
 
+
+.submitted {
+  font-size: .9em;
+  }
+
 .nomarg {
   margin: 0;
   }
+
 
 div.terms {
   clear: left !important;
