--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -136,9 +136,15 @@ p.copy a.poweredby:hover {
   border: none !important;
   }
 
+
+.submitted {
+  font-size: .9em;
+  }
+
 .nomarg {
   margin: 0;
   }
+
 
 div.terms {
   clear: left !important;
@@ -222,9 +228,8 @@ ul.links li {
 
 ul.links li a, ul.links li a:visited {
   text-decoration: none;
-  font-style: normal;
   padding: 1px 0 1px 3px;
-  font-size: 12px;
+  font: normal 11px/normal 'trebuchet MS', sans-serif;
   color: #228822;
   background: transparent;
   }
@@ -232,10 +237,6 @@ ul.links li a, ul.links li a:visited {
 ul.links li a:hover {
   text-decoration: underline;
   color: #228822;
-  }
-
-.views-admin-links ul.links li a {
-  font-size:10px;
   }
 
 ul.hierarchic {
