--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -214,3 +214,26 @@ td.welcome {
 	border-top: 1px dotted #ccc;
 	font-size: .75em;
 	}
+
+.action_button {
+	background:transparent url(images/button_bkgnd.gif) no-repeat scroll 0 0;
+	height:36px;
+	margin:0 auto;
+	text-align:center;
+	width:188px;
+  }
+
+.action_button h3 {
+	font-size:16px;
+	height:36px;
+	line-height:36px;
+	margin:0;
+	padding:0;
+	text-align:center;
+	width:188px;
+  }
+
+.action_button a {
+	color:#FFFFFF;
+	text-decoration:none;
+	}
