--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -111,7 +111,7 @@ p.copy a.footer-login:hover {
   background: #fff !important;
   }
 
-.marker, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
+.marker, ul.admin li a, ul.admin li a:visited, .addcategory a, a.ctools-dropdown-link, a.context-button {
   color: #228822 !important;
   }
 
@@ -229,7 +229,7 @@ ul.links li {
 ul.links li a, ul.links li a:visited {
   text-decoration: none;
   padding: 1px 0 1px 3px;
-  font: normal 11px/normal 'trebuchet MS', sans-serif;
+  font: normal 11px/normal "Lucida Grande","Lucida Sans Unicode", Arial,  Verdana,sans-serif;
   color: #228822;
   background: transparent;
   }
@@ -555,30 +555,7 @@ a.delete {
   clear: both;
   }
 
-.item-list ul.context-links {
-  margin: 0;
-  }
-
-.item-list ul.context-links li, #ctools-dropdown-1 {
-  list-style:none;
-  margin:0 0 0 .7em;
-  float:right;
-  list-style: none;
-  padding: 0;
-  }
-
-a.context-button, html.js div.ctools-dropdown a.ctools-dropdown-text-link, .addcategory a {
-  font-style: normal !important;
-  font-size: 12px !important;
-  background: url(images/plus.png) no-repeat 0 50% transparent !important;
-  padding: 0 0 0 13px !important;
-  }
-
-a.context-button:hover {
-  background-color: transparent !important;
-  }
-
-.empty-content p, .empty-content .item-list ul.context-links li {
+.empty-content p {
   float: left;
   }
 
