--- a/sites/all/themes/openscholar/scholar_base/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/biblio.css
@@ -158,11 +158,13 @@ a:active {
   background-color: #D9E6F2;
 }
 
+/*
 .biblio-export {
   text-align: right;
   text-decoration: none;
   float: right;
 }
+*/
 
 .biblio-abstract-link {
   text-align: left;
