--- a/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
@@ -45,17 +45,23 @@
   display:block;
   }
 
+
+.cite_distribute .slider {
+  position: static;
+  width: 200px;
+  margin-right: 10px;
+  float: right;
+  }
+
 .vsite-admin ul.links li a, .vsite-admin .vsite-admin ul.links li a:visited, .vsite-admin ul.links li .flag-wrapper {
   color: #005C9C;
   background: transparent;
-  padding: 4px 9px !important;
   display:block;
   font: normal 12px/normal arial, sans-serif;
   }
 
 .vsite-admin ul.links li .flag-wrapper a {
   display:inline;
-  padding: 0 !important;
   }
 
 .vsite-admin ul.links li a:hover, .vsite-admin ul.links li .flag-wrapper:hover {
@@ -67,13 +73,11 @@
   }
 
 .vsite-admin li.cite_distribute .distribute-form-wrapper {
-  position: absolute;
-  top: 12px;
-  left: 0;
-  background:#eef3fb;
-  border: 1px solid #dde2eb;
-  padding: 10px;
-  width: 400px;
+  padding: 0;
+  border:none;
+  float:right;
+  width: 200px
+  margin-top: -50px
   }
 
 .vsite-admin li.cite_distribute .distribute-form-wrapper fieldset {
@@ -87,8 +91,7 @@
   }
 
 .vsite-admin li.cite_distribute .repository-item {
-  display: inline;
-  margin-right: 15px;
+  margin-bottom: 3px;
   }
 
 .vsite-admin li.cite_distribute .repository-item .form-item {
@@ -96,8 +99,9 @@
   }
 
 #edit-cite-distribute-submit {
-  margin-left: 85px;
+  float:right;
   margin-bottom: 0;
+  background: transparent;
   }
 
 
