--- a/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
@@ -104,6 +104,15 @@
   background: transparent;
   }
 
+.node.admin-active .node-inner {
+  border: 2px solid #356df6;
+  margin:-2px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius:3px;
+  border-radius: 3px;
+
+  }
+
 
 /* WELCOME MESSAGE SPECIFIC */
 
