--- a/sites/all/themes/openscholar/scholar_base/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/dropdown.css
@@ -97,6 +97,15 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   }
 
 
+.vsite-admin a.ctools-dropdown-link {
+  background: url(images/admin-wrench.png) 0 0 no-repeat transparent;
+  padding-left: 20px;
+  }
+
+.vsite-admin a.ctools-dropdown-link:active {
+  border: 1px solid blue;
+  }
+
 .empty-content .item-list ul.context-links li {
   float: left;
   }
