--- a/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/openscholar_vsite/vsite/theme/vsite-admin-links.css
@@ -104,13 +104,16 @@
   background: transparent;
   }
 
-.node.admin-active .node-inner {
-  border: 2px solid #356df6;
-  margin:-2px;
+.active-marker {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  right:-3px;
+  bottom: 0px;
+  border: 1px dashed #228822;
   -moz-border-radius: 3px;
   -webkit-border-radius:3px;
   border-radius: 3px;
-
   }
 
 
