--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -476,6 +476,10 @@ body.header-right-main #header-wrapper {
   font-size: 12px;
   }
 
+#pub_type_tabs ul.links li a.ctools-dropdown-link {
+  padding-left:20px;
+  }
+
 /* FOOTER */
 
 #footer {
