--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -498,6 +498,7 @@ body.header-left-right #header-right {
   padding-bottom: 1.5em;
   margin-bottom: 1.5em;
   clear:both;
+  position: relative;
   }
 
 .node-type-link {
