--- a/sites/all/themes/openscholar/scholar_base/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/dropdown.css
@@ -51,6 +51,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container, #ui-datepicker-div {
 
 .item-list ul.context-links {
   margin: 0;
+  float:right;
   }
 
 .item-list ul.context-links li, #ctools-dropdown-1 {
@@ -60,7 +61,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container, #ui-datepicker-div {
   padding: 0;
   }
 
-.ctools-dropdown,
+.item-list ul.context-links li,.ctools-dropdown,
 .ctools-dropdown .ctools-dropdown-link-wrapper,
 .ctools-dropdown .ctools-dropdown-container-wrapper,
 html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
@@ -97,7 +98,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li{
   }
 
 
-.vsite-admin a.ctools-dropdown-link {
+ul.links .vsite-admin a.ctools-dropdown-link {
   background: url(images/admin-wrench.png) 0 0 no-repeat transparent;
   padding-left: 20px;
   }
