--- a/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
+++ b/sites/all/themes/openscholar/scholar_cayley/scholar-cayley.css
@@ -66,6 +66,7 @@ p.copy {
   width: 1012px;
   margin: 0 auto;
   padding-top: 1px;
+  background: url(images/container.png) repeat-y 0 0 transparent;
   }
 
 
@@ -93,8 +94,6 @@ p.copy {
 
 
 #content-wrapper {
-  background: url(images/container.png) repeat-y 0 0 transparent;
-  overflow: hidden;
   }
 
 #footer {
@@ -109,17 +108,20 @@ p.copy {
   padding: 0 33px;
   }
 
-body.sidebar-left #content-wrapper, body.sidebar-left #header, body.sidebar-left #footer {
+body.sidebar-left #container, body.sidebar-left #header, body.sidebar-left #footer {
   background-position: -1012px 0;
   }
 
-body.sidebar-right #content-wrapper, body.no-sidebars #header, body.no-sidebars #footer {
+body.sidebar-right #container, body.no-sidebars #header, body.no-sidebars #footer {
   background-position: -2024px 0;
-  padding-left: 43px;
   }
 
-body.no-sidebars #content-wrapper, body.no-sidebars #footer, body.navbar-off #header, body.navbar-off #content-wrapper  {
+body.no-sidebars #container, body.no-sidebars #footer, body.navbar-off #header, body.navbar-off #container  {
   background-position: -3036px 0;
+  }
+
+body.no-sidebars #header, body.no-sidebars #content-wrapper, body.sidebar-right #content-wrapper, body.no-sidebars #footer {
+  padding-left: 43px;
   }
 
 body.sidebar-left #content-wrapper {
