gary changes, fixes to scheple theme

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -20,13 +20,15 @@
   letter-spacing: .5px;
   }
 
+#block-iqss_gking-areas_of_research h3 {
+  background: url("images/connector.png") no-repeat 214px 11px transparent;
+  }
+
 #block-iqss_gking-areas_of_research #methods h4 {
   position: relative;
   left: 145px;
   top:-10px;
   margin-bottom: 0;
-  background: url(images/connector.png) no-repeat 100% 50% transparent;
-  padding-right: 136px;
   width: 62px;
   }
 
@@ -36,16 +38,21 @@
   float: left;
   }
 
+#block-iqss_gking-areas_of_research dt span {
+  display:block;
+  height: 23px;
+  }
+
 #block-iqss_gking-areas_of_research dt {
  list-style: none;
  padding: 0;
  margin: 0;
  font-weight:bold;
- padding: 2px 3px;
- cursor:pointer;
+ /*cursor:pointer;*/
  float: left;
  clear:left;
-  }
+ height: 23px;
+ }
 
 #block-iqss_gking-areas_of_research h3,
 #block-iqss_gking-areas_of_research #methods {
@@ -60,7 +67,7 @@
 #block-iqss_gking-areas_of_research #applications {
   float:right;
   clear:none;
-  margin-top: -29px;
+  margin-top: -31px;
   margin-right: 0;
   width: 380px;
   }
@@ -80,20 +87,20 @@
   }
 
 #block-iqss_gking-areas_of_research div.bg {
-  padding: 1px 2px 1px 14px;
-  left: -12px;
   background:rgba(254,254,230,.88);
   position: absolute;
-  top: 0;
-  height: 20px;
-  width: 338px;
+  top: -2px;
+  bottom: -2px;
+  right: -8px;
+  left: -12px;
   display:none;
   z-index:-2;
+  -moz-border-radius: 0 15px 15px 0;
+  -webkit-border-radius: 0 15px 15px 0;
   }
 
 #block-iqss_gking-areas_of_research #applications div.bg {
-  left: -360px;
-  width: 725px;
+  left:-362px;
   }
 
 #block-iqss_gking-areas_of_research dt.active div.bg {
