--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -494,7 +494,7 @@ body.header-left-right #header-right {
 
 /* Node */
 
-.node {
+.node, .biblio-entry {
   padding-bottom: 1.5em;
   margin-bottom: 1.5em;
   clear:both;
