--- a/sites/all/themes/openscholar/cp_theme/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/cp-theme.css
@@ -159,7 +159,8 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
 
 
 .item-list ul.context-links {
-  padding: 30px 0 0 30px
+  padding: 30px 0 0 30px;
+  float:none;
   }
 
 
