scolar_bunchy changes etc

--- a/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
+++ b/sites/all/themes/openscholar/scholar_bigpic/scholar-bigpic.css
@@ -77,8 +77,12 @@ a:hover {
   background-position: 100% 0;
   }
 
-.one-sidebar #header, .one-sidebar #footer {
+.one-sidebar #header{
   background-position: 748px 100%;
+  }
+
+.one-sidebar #footer {
+  background-position: 748px 0;
   }
 
 .no-sidebars #header, .no-sidebars #footer {
