--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -132,13 +132,9 @@
 
 #block-iqss_gking-areas_of_research .more {
   display:none;
- font-weight: bold;
- text-decoration: none;
- font-size: 12px;
- letter-spacing: -1px;
- color: #0fbbb5;
- padding-right: 10px;
- background: url(images/arrow-aqua.png) 100% 5px no-repeat transparent;
+  color: #0fbbb5;
+  padding-left: 0;
+  background-image: url(images/arrow-aqua.png);
   }
 
 #block-iqss_gking-areas_of_research .more:hover {
