--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -120,6 +120,15 @@ a:hover {
   text-decoration: underline;
   }
 
+.more {
+ font-weight: bold;
+ text-decoration: none;
+ font-size: 12px;
+ letter-spacing: -1px;
+ color: #fff;
+ padding: 0 10px;
+ background: url(images/arrow-white.png) 100% 5px no-repeat transparent;
+  }
 
 .item-list .pager li {
   margin: 0;
