--- a/sites/all/themes/openscholar/scholar_base/tables.css
+++ b/sites/all/themes/openscholar/scholar_base/tables.css
@@ -48,6 +48,10 @@ tr.selected td, tr.selected td a {
   color: #fff;
   }
 
+#content table {
+  clear: both;
+  }
+
 /* MODULES LIST */
 
 table.package .version {
@@ -57,3 +61,4 @@ table.package .version {
 table.package .description {
   width: 100%;
   }
+
