--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -89,9 +89,9 @@
 #block-iqss_gking-areas_of_research div.bg {
   background:rgba(254,254,230,.88);
   position: absolute;
-  top: -2px;
-  bottom: -2px;
-  right: -8px;
+  top: -.6em;
+  bottom: -.1em;
+  right: -.8em;
   left: -12px;
   display:none;
   z-index:-2;
