gary front page block

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -18,22 +18,28 @@
   border: none;
   background: transparent;
   letter-spacing: .5px;
+
+  font: 19px/normal helvetica, arial, sans-serif;
+  letter-spacing: -0.05em;
+  font-weight: bold;
+  color: #BF6300;
   }
 
 #block-iqss_gking-areas_of_research h3 {
-  background: url("images/connector.png") no-repeat 214px 11px transparent;
+  background: url("images/connector.png") no-repeat 234px 40% transparent;
+  color: #444;
   }
 
 #block-iqss_gking-areas_of_research #methods h4 {
   position: relative;
-  left: 145px;
+  left: 157px;
   top:-10px;
   margin-bottom: 0;
-  width: 62px;
+  width: 100px;
   }
 
 #block-iqss_gking-areas_of_research .col {
-  width: 351px;
+  width: 369px;
   clear: left;
   float: left;
   }
@@ -61,15 +67,14 @@
   }
 
 #block-iqss_gking-areas_of_research #methods {
-  margin-top: -21px;
+  margin-top: -10px;
   }
 
 #block-iqss_gking-areas_of_research #applications {
-  float:right;
   clear:none;
-  margin-top: -31px;
+  margin-top: -20px;
   margin-right: 0;
-  width: 380px;
+  width: 362px;
   }
 
 #block-iqss_gking-areas_of_research #applications h4 {
@@ -78,7 +83,7 @@
 
 #block-iqss_gking-areas_of_research dd {
   background: #fbfee8;
-  border: 1px solid #fbfee8;
+  border: 1px solid #ddd;
   }
 
 #block-iqss_gking-areas_of_research .col dt {
@@ -89,18 +94,20 @@
 #block-iqss_gking-areas_of_research div.bg {
   background:rgba(254,254,230,.88);
   position: absolute;
-  top: -.6em;
-  bottom: -.1em;
+  top: -6px;
+  bottom: 3px;
   right: -.8em;
   left: -12px;
   display:none;
   z-index:-2;
   -moz-border-radius: 0 15px 15px 0;
   -webkit-border-radius: 0 15px 15px 0;
+  border: 1px solid #ddd;
+  border-left-color:#fbfee8;
   }
 
 #block-iqss_gking-areas_of_research #applications div.bg {
-  left:-362px;
+  left:-379px;
   }
 
 #block-iqss_gking-areas_of_research dt.active div.bg {
